k8s/excalidraw/excalidraw.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace excalidraw -o excalidraw.yaml
    kompose.service.expose: excalidraw.wayl.one
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: excalidraw
  name: excalidraw
  namespace: excalidraw
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
  selector:
    io.kompose.service: excalidraw
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: excalidraw
  namespace: excalidraw
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace excalidraw -o excalidraw.yaml
    kompose.service.expose: excalidraw.wayl.one
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: excalidraw
  name: excalidraw
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: excalidraw
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace excalidraw -o excalidraw.yaml
        kompose.service.expose: excalidraw.wayl.one
        kompose.version: 1.31.2 (a92241f79)
        diun.enable: "true"
      creationTimestamp: null
      labels:
        io.kompose.network/excalidraw-default: "true"
        io.kompose.service: excalidraw
    spec:
      tolerations:
        - key: "performance"
          operator: "Equal"
          effect: "NoSchedule"
          value: "low"
      containers:
        - env:
            - name: NODE_ENV
              value: development
          image: excalidraw/excalidraw
          name: excalidraw
          ports:
            - containerPort: 80
              hostPort: 3000
              protocol: TCP
          resources: {}
          stdin: true
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: excalidraw
  name: excalidraw
  namespace: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: excalidraw.wayl.one
      http:
        paths:
          - backend:
              service:
                name: excalidraw
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - excalidraw.wayl.one
      secretName: excalidraw-cert-tls
status:
  loadBalancer: {}
